[package]
name = "av-metrics-decoders"
version = "0.1.7"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2021"
description = "Decoders for use with av-metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av-metrics = { path = "../av_metrics" }
ffmpeg-next = { version = "5.0.3", optional = true, default-features = false, features = [
    "codec",
    "format",
] }
y4m = { version = "0.7", optional = true }

[dependencies.vapoursynth]
git = "https://github.com/YaLTeR/vapoursynth-rs"
rev = "074417335ff9c139956c62771835798c9a302e67"
features = ["vsscript-functions", "vapoursynth-functions"]

[features]
ffmpeg = ["ffmpeg-next"]
# Link a FFmpeg version built statically
ffmpeg_static = ["ffmpeg-next/static"]
# Build FFmpeg statically (https://github.com/zmwangx/rust-ffmpeg-sys/blob/master/Cargo.toml)
ffmpeg_build = ["ffmpeg-next/build"]
