[package]
name = "av-metrics-decoders"
version = "0.1.7"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
edition = "2021"
description = "Decoders for use with av-metrics"
license = "MIT"
repository = "https://github.com/rust-av/av-metrics"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av-metrics = { path = "../av_metrics" }
ffmpeg-next = { version = "5.0.3", optional = true, default-features = false, features = [
    "codec",
    "format",
] }
y4m = { version = "0.7", optional = true }

[dependencies.vapoursynth]
version = "0.4.0"
features = ["vsscript-functions", "vapoursynth-functions"]

[features]
default = ["vapoursynth_new_api"]
ffmpeg = ["ffmpeg-next"]
# Link a FFmpeg version built statically
ffmpeg_static = ["ffmpeg-next/static"]
# Build FFmpeg statically (https://github.com/zmwangx/rust-ffmpeg-sys/blob/master/Cargo.toml)
ffmpeg_build = ["ffmpeg-next/build"]
# Build vapoursynth wrapper with new API
vapoursynth_new_api = [
    "vapoursynth/vapoursynth-api-32",
    "vapoursynth/vsscript-api-31",
]
